fixed bug 10630: Background Colour in Editor (JavaScript-Mode) too dark
git-svn-id: http://svn.ilias.de/svn/ilias/branches/Release_4_3_x_branch@40061 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -66,7 +66,7 @@ body {
 
 body {
 	color: #222;
-	background: none #F9F9F9;
+	background: none #FFFFFF;
 	line-height: 1.3;
 	font-size: .89em; /**/
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -953,6 +953,10 @@ div.ilExplorerFrame {
 }
 
 td.ilExpH {
+}
+
+body.il_Explorer {
+	background: #F9F9F9;
 }
 
 div.il_Explorer
